@@ -8,6 +8,7 @@ use Test::More;
 # the environment in which the tests are run.  This is certainly not a
 # full list of all installed modules.
 my @show_versions = qw/
+	Dancer
 	Dancer2
 	Log::Report
 	Log::Report::Optional
@@ -27,10 +28,21 @@ foreach my $package (sort @show_versions)
     warn "$package $report\n";
 }
 
-use_ok('Dancer::Logger::LogReport');
-use_ok('Dancer2::Logger::LogReport');
-use_ok('Dancer2::Plugin::LogReport::Message');
-use_ok('Dancer2::Plugin::LogReport');
-use_ok('Dancer2::Template::TTLogReport');
+if($INC{'Dancer.pm'})
+{	use_ok('Dancer::Logger::LogReport');
+}
+else
+{	diag "Dancer(1) is not installed";
+}
+
+if($INC{'Dancer2.pm'})
+{	use_ok('Dancer2::Logger::LogReport');
+	use_ok('Dancer2::Plugin::LogReport::Message');
+	use_ok('Dancer2::Plugin::LogReport');
+	use_ok('Dancer2::Template::TTLogReport');
+}
+else
+{	diag "Dancer2 is not installed";
+}
 
 done_testing;
