@@ -6,6 +6,10 @@ Mark Overmeer.
 
 version 2.01:
 
+	Fixes:
+	- test module use for Dancer/Dancer2 only when they are installed.
+	  reported by [Andy Beverley]
+
 version 2.00: Tue  4 Nov 16:45:48 CET 2025
 
 	Fixes:
